--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.10.0",
     "chart.js": "^4.5.0",
+    "chartjs": "^0.3.24",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.344.0",
     "PlacePlep": "file:..",
