--- a/backend/.env.example
+++ b/backend/.env.example
@@ -15,7 +15,7 @@ ARCJET_ENV=development
 
 GOOGLE_CLIENT_ID=645456995574-nm6p15hqubvu06irdbvvdc8r2n8d09c5.apps.googleusercontent.com
 
-EMAIL_USER=team.placeprep@gmail.com
+EMAIL_USER=contact.teameduverse@gmail.com
 EMAIL_PASS=mxgfdkhvxnbohdgj
 
 GEMINI_API_KEY="AIzaSyBrrB6b2ju8NvJuti0s5Jq321uU4d-TEm0"
@@ -29,7 +29,7 @@ NODE_ENV=production
 PORT=5001
 DATABASE_URL=postgresql://admin:vpDLpHFpqY8JFH5plh1CMl40DAPtv92k@dpg-d2isain5r7bs739vk2h0-a/placeprep
 JWT_SECRET=mysecret
-EMAIL_USER=team.placeprep@gmail.com
+EMAIL_USER=contact.teameduverse@gmail.com
 EMAIL_PASS=mxgfdkhvxnbohdgj
 FRONTEND_URL=https://placeprep-otc4.onrender.com
 
